WIP: not ready to run refactored to use new HttpRequester and support proxy with basic auth