@@ -3,15 +3,14 @@ package org.opengeoportal.proxy;
 import java.io.File;
 import java.io.InputStream;
 import java.net.URL;
+import java.nio.charset.StandardCharsets;
 import java.util.concurrent.Future;
 
 import org.apache.commons.io.FileUtils;
-import org.apache.commons.io.IOUtils;
 import org.opengeoportal.http.HttpRequester;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.context.annotation.Scope;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.scheduling.annotation.AsyncResult;
@@ -33,13 +32,12 @@ public class ImageDownloaderImpl implements ImageDownloader {
 	@Async
 	public Future<File> getImage(URL imageLocation) throws Exception {		
 		
-		InputStream is = null;
-		try {
+		String query = imageLocation.getQuery();
+		String base = imageLocation.toString().replace(query, "");
+		try (InputStream is = this.httpRequester.sendRequest(base, query, "GET", "text/xml")) {
+
 			File tempFile = File.createTempFile("img", ".png");
-			String query = imageLocation.getQuery();
-			String base = imageLocation.toString().replace(query, "");
-			
-			is = this.httpRequester.sendRequest(base, query, "GET");
+
 			String contentType = this.httpRequester.getContentType();
 			logger.debug(contentType);
 			if (contentType.toLowerCase().contains("png")){
@@ -49,16 +47,43 @@ public class ImageDownloaderImpl implements ImageDownloader {
 			} else {
 					if ((contentType.toLowerCase().contains("xml"))||(contentType.toLowerCase().contains("html"))||
 							(contentType.toLowerCase().contains("text"))){
-						logger.error("Response content: " + IOUtils.toString(is));
+						logger.error("Response content: " + new String(is.readAllBytes(), StandardCharsets.UTF_8));
 					}
 				
 				throw new Exception("Image not found");
 			}
 
-		} finally {
-			IOUtils.closeQuietly(is);
 		}
 
 	}
 
+	@Override
+	@Async
+	public Future<File> getImage(URL imageLocation, String username, String password) throws Exception {
+
+		String query = imageLocation.getQuery();
+		String base = imageLocation.toString().replace(query, "");
+		try (InputStream is = this.httpRequester.sendRequest(base, query, "GET",
+				"text/xml", username, password)) {
+
+			File tempFile = File.createTempFile("img", ".png");
+
+			String contentType = this.httpRequester.getContentType();
+			logger.debug(contentType);
+			if (contentType.toLowerCase().contains("png")){
+				FileUtils.copyInputStreamToFile(is, tempFile);
+				return new AsyncResult<File>(tempFile);
+
+			} else {
+				if ((contentType.toLowerCase().contains("xml"))||(contentType.toLowerCase().contains("html"))||
+						(contentType.toLowerCase().contains("text"))){
+					logger.error("Response content: " + new String(is.readAllBytes(), StandardCharsets.UTF_8));
+				}
+
+				throw new Exception("Image not found");
+			}
+
+		}
+
+	}
 }
